misc: fix deprecation warnings